@@ -1,3 +1,10 @@
+2006-12-22  Inge Wallin  <inge@lysator.liu.se>
+
+	Fourth step, part 3 of wish 117960
+	Put the config dialog in dialogs/
+	* Move:
+	kchartLegendConfigPage  -->  dialogs/KCConfigLegendPage
+
 2006-12-21  Inge Wallin  <inge@lysator.liu.se>
 
 	Fourth step, part 2 of wish 117960
